force-app/src/objects/ffps_vat__VAT_Return_Report__c.object
<CustomObject>
    <fields>
        <fullName>ffps_vat__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED: Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>VAT Return Reports</relationshipLabel>
        <relationshipName>VAT_Return_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Date_From__c</fullName>
        <label>Date From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Date_To__c</fullName>
        <label>Date To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Include_Outdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Outdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Line_Count__c</fullName>
        <label>Line Count</label>
        <summaryForeignKey>ffps_vat__VAT_Return_Report_Summary_Line__c.ffps_vat__VAT_Return_Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Net_Reported__c</fullName>
        <label>Net Reported</label>
        <summarizedField>ffps_vat__VAT_Return_Report_Summary_Line__c.ffps_vat__Net_Reported__c</summarizedField>
        <summaryForeignKey>ffps_vat__VAT_Return_Report_Summary_Line__c.ffps_vat__VAT_Return_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Period_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED: Period From</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>VAT Return Reports</relationshipLabel>
        <relationshipName>VAT_Return_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Period_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED: Period To</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>VAT Return Reports (Period To)</relationshipLabel>
        <relationshipName>VAT_Return_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generating</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_vat__VAT_Report_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT Report Definition</label>
        <referenceTo>ffps_vat__VAT_Report_Definition__c</referenceTo>
        <relationshipLabel>VAT Return Reports</relationshipLabel>
        <relationshipName>VAT_Return_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>VAT Return Report</label>
    <nameField>
        <label>VAT Return Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT Return Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>